# ai-news-studio

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: drafts.py  health.py  news.py  used_news.py  videos.py
backend/app/core/: config.py  security.py
backend/app/schemas/: draft.py  news.py  video.py
backend/app/services/: categorize.py  draft_store.py  email_notifier.py  fetch_news.py  filter_priority.py  generate_weekly_video_plan.py  image_assets.py  kana_reading.py  polish_narration.py  prepare_video_draft.py  refresh_news_with_search.py  select_news_for_video.py  song.py  song_backing.py  used_news_store.py  video_assets.py  video_generator.py  video_review.py  weekly_draft.py  weekly_video_job.py  weekly_video_scheduler.py  youtube_uploader.py
backend/scripts/: get_youtube_refresh_token.py  smoke_video.py
backend/tests/: test_generate_weekly_video_plan.py  test_kana_reading.py  test_prepare_video_draft.py  test_select_news_for_video.py  test_song.py  test_song_backing.py  test_video_assets.py  test_video_generator.py  test_video_review.py  test_weekly_video_job.py  test_weekly_video_scheduler.py  test_youtube_uploader.py
docs/: youtube-oauth.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CopyButton.tsx  NewsCard.tsx  NewsDetail.tsx  NewsList.tsx  VideoPlan.tsx
frontend/src/hooks/: useDraft.ts  (+5 more)
(+13 files in other folders)
